Update dot files

--- a/tmux.conf
+++ b/tmux.conf
@@ -4,7 +4,7 @@ set -sg escape-time 0
 setw -g mode-keys vi
 
 # Easy config reload
-bind-key R source-file ~/.config/nvim/tmux.conf \; display-message "tmux.conf reloaded"
+bind-key R source-file ~/.tmux.conf \; display-message "tmux.conf reloaded"
 
 # use vim-like keys for splits and windows
 bind-key v split-window -h
