--- a/tmux.conf
+++ b/tmux.conf
@@ -44,3 +44,23 @@ bind-key -n C-k if-shell "$not_tmux" "send-keys C-k"  "select-pane -U"
 
 set -g visual-activity on
 
+
+# -----------#
+# Status bar #
+# -----------#
+set -g base-index 1
+setw -g pane-base-index 1
+
+set-option -g status-justify left
+set-option -g status-left '#[bg=colour2] #[bg=colour237] #[bg=colour236] #[bg=colour235]#[fg=colour185] #S #[bg=colour236] '
+set-option -g status-left-length 20
+set-option -g status-bg colour237
+set-option -g status-right '#[bg=colour236] #[bg=colour235]#[fg=colour185] %a %R #[bg=colour236]#[fg=colour3] #[bg=colour237] #[bg=colour2] #[]'
+set-option -g status-interval 60
+
+set-option -g pane-active-border-style fg=colour246
+set-option -g pane-border-style fg=colour238
+
+set-window-option -g window-status-format '#[bg=colour238]#[fg=colour8] #I #[bg=colour239]#[fg=colour8] #[bg=colour240]#W#[bg=colour239]#[fg=colour195]#F#[bg=colour238] '
+set-window-option -g window-status-current-format '#[bg=colour236]#[fg=colour2] #I #[bg=colour235]#[fg=colour2] #[bg=colour234]#W#[bg=colour235]#[fg=colour195]#F#[bg=colour236] '
+
